// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`number-line widget should snapshot on mobile: first mobile render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph perseus-paragraph-centered"
      data-perseus-paragraph-index="0"
    >
      <div
        class="perseus-block-math"
        style="margin-left: -16px; margin-right: -16px;"
      >
        <div
          class="perseus-block-math-inner"
          style="overflow-x: auto; overflow-y: hidden; margin-top: -10px; margin-bottom: -10px; transform: translate3d(0,0,0); padding: 10px 16px 10px 16px;"
        >
          <span
            style="display: block; width: 100%; transform: scale(1, 1); transform-origin: 0 0; opacity: 1;"
          >
            <span
              class="mock-TeX"
            >
              E=2.5
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <div
        class="paragraph"
      >
        <strong>
          Move the dot to 
          <span
            style="white-space: nowrap;"
          >
            <span />
            <span
              class="mock-TeX"
            >
              -E
            </span>
            <span />
          </span>
           on the number line.
        </strong>
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="2"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <div
            class="perseus-widget perseus-widget-interactive-number-line"
          >
            <div
              class="graphie-container"
            >
              <div
                class="graphie"
                style="position: relative; width: 288px; height: 80px;"
              >
                <svg
                  height="80"
                  style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); z-index: 2;"
                  version="1.1"
                  width="288"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <desc
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                  >
                    Created with Raphaël
                  </desc>
                  <defs
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                  />
                  <rect
                    fill="#000000"
                    height="80"
                    opacity="0"
                    r="0"
                    rx="0"
                    ry="0"
                    stroke="#000"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); opacity: 0;"
                    width="288"
                    x="0"
                    y="0"
                  />
                </svg>
                <svg
                  height="80"
                  style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                  version="1.1"
                  width="288"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <desc
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                  >
                    Created with Raphaël
                  </desc>
                  <defs
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                  />
                  <path
                    d="M281.05,45.6C281.05,45.6,286.3,40,286.3,40C286.3,40,281.05,34.4,281.05,34.4"
                    fill="none"
                    stroke="#000000"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 2; stroke-linejoin: round; stroke-linecap: round;"
                    transform=""
                  />
                  <path
                    d="M144,40C144,40,144,40,286.95,40"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 2;"
                  />
                  <path
                    d="M-4.849999999999988,45.6C-4.849999999999988,45.6,0.4000000000000119,40,0.4000000000000119,40C0.4000000000000119,40,-4.849999999999988,34.4,-4.849999999999988,34.4"
                    fill="none"
                    stroke="#000000"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 2; stroke-linejoin: round; stroke-linecap: round;"
                    transform="rotate(180 1.0500100000000114 40)"
                  />
                  <path
                    d="M144,40C144,40,144,40,1.0500000000000114,40"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 2;"
                  />
                  <path
                    d="M29.999999999999993,48L29.999999999999993,32"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); shape-rendering: crispEdges; stroke-width: 2;"
                  />
                  <path
                    d="M58.49999999999999,48L58.49999999999999,32"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); shape-rendering: crispEdges; stroke-width: 2;"
                  />
                  <path
                    d="M86.99999999999999,48L86.99999999999999,32"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); shape-rendering: crispEdges; stroke-width: 2;"
                  />
                  <path
                    d="M115.49999999999999,48L115.49999999999999,32"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); shape-rendering: crispEdges; stroke-width: 2;"
                  />
                  <path
                    d="M144,48L144,32"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); shape-rendering: crispEdges; stroke-width: 2;"
                  />
                  <path
                    d="M172.5,48L172.5,32"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); shape-rendering: crispEdges; stroke-width: 2;"
                  />
                  <path
                    d="M201,48L201,32"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); shape-rendering: crispEdges; stroke-width: 2;"
                  />
                  <path
                    d="M229.5,48L229.5,32"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); shape-rendering: crispEdges; stroke-width: 2;"
                  />
                  <path
                    d="M258,48L258,32"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); shape-rendering: crispEdges; stroke-width: 2;"
                  />
                  <path
                    d="M29.999999999999993,48L29.999999999999993,32"
                    fill="none"
                    stroke="#1865f2"
                    stroke-width="3.5"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); shape-rendering: crispEdges; stroke-width: 3.5;"
                  />
                  <path
                    d="M258,48L258,32"
                    fill="none"
                    stroke="#1865f2"
                    stroke-width="3.5"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); shape-rendering: crispEdges; stroke-width: 3.5;"
                  />
                </svg>
                <div
                  style="position: absolute; left: 0px; top: 0px;"
                >
                  <div
                    style="position: absolute; width: 24px; height: 24px; left: 17.999999999999993px; top: 28px; filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5)); transform: translateX(0px) translateY(0px) translateZ(0);"
                  >
                    <svg
                      height="24"
                      style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                      version="1.1"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <desc
                        style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                      >
                        Created with Raphaël
                      </desc>
                      <defs
                        style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                      />
                      <ellipse
                        cx="NaN"
                        cy="NaN"
                        fill="#00a60e"
                        r="NaN"
                        rx="7"
                        ry="7"
                        stroke="#ffffff"
                        stroke-width="3"
                        style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 3;"
                        transform=""
                      />
                    </svg>
                  </div>
                </div>
                <div
                  style="position: absolute; left: 0px; top: 0px; z-index: 2;"
                >
                  <div
                    data-interactive-kind-for-testing="movable-point"
                    style="position: absolute; width: 48px; height: 48px; left: 5.999999999999993px; top: 16px; transform: translateX(0px) translateY(0px) translateZ(0);"
                  >
                    <svg
                      height="48"
                      style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                      version="1.1"
                      width="48"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <desc
                        style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                      >
                        Created with Raphaël
                      </desc>
                      <defs
                        style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                      />
                      <ellipse
                        cx="24"
                        cy="24"
                        fill="#000000"
                        opacity="0"
                        rx="24"
                        ry="24"
                        stroke="#000"
                        style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); opacity: 0; cursor: move;"
                      />
                    </svg>
                  </div>
                </div>
                <span
                  class="graphie-label"
                  data-math-formula="-4"
                  style="position: absolute; padding: 7px; color: rgb(24, 101, 242); left: 29.999999999999993px; top: 61.2px; fill: none;"
                >
                  <span
                    class="tex-holder"
                  />
                </span>
                <span
                  class="graphie-label"
                  data-math-formula="-3"
                  style="position: absolute; padding: 7px; color: black; left: 58.49999999999999px; top: 61.2px; fill: none;"
                >
                  <span
                    class="tex-holder"
                  />
                </span>
                <span
                  class="graphie-label"
                  data-math-formula="-2"
                  style="position: absolute; padding: 7px; color: black; left: 86.99999999999999px; top: 61.2px; fill: none;"
                >
                  <span
                    class="tex-holder"
                  />
                </span>
                <span
                  class="graphie-label"
                  data-math-formula="-1"
                  style="position: absolute; padding: 7px; color: black; left: 115.49999999999999px; top: 61.2px; fill: none;"
                >
                  <span
                    class="tex-holder"
                  />
                </span>
                <span
                  class="graphie-label"
                  data-math-formula="0"
                  style="position: absolute; padding: 7px; color: black; left: 144px; top: 61.2px; fill: none;"
                >
                  <span
                    class="tex-holder"
                  />
                </span>
                <span
                  class="graphie-label"
                  data-math-formula="1"
                  style="position: absolute; padding: 7px; color: black; left: 172.5px; top: 61.2px; fill: none;"
                >
                  <span
                    class="tex-holder"
                  />
                </span>
                <span
                  class="graphie-label"
                  data-math-formula="2"
                  style="position: absolute; padding: 7px; color: black; left: 201px; top: 61.2px; fill: none;"
                >
                  <span
                    class="tex-holder"
                  />
                </span>
                <span
                  class="graphie-label"
                  data-math-formula="3"
                  style="position: absolute; padding: 7px; color: black; left: 229.5px; top: 61.2px; fill: none;"
                >
                  <span
                    class="tex-holder"
                  />
                </span>
                <span
                  class="graphie-label"
                  data-math-formula="4"
                  style="position: absolute; padding: 7px; color: rgb(24, 101, 242); left: 258px; top: 61.2px; fill: none;"
                >
                  <span
                    class="tex-holder"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`number-line widget should snapshot: first render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph perseus-paragraph-centered"
      data-perseus-paragraph-index="0"
    >
      <div
        class="perseus-block-math"
      >
        <div
          class="perseus-block-math-inner"
          style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
        >
          <span
            class="mock-TeX"
          >
            E=2.5
          </span>
        </div>
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <div
        class="paragraph"
      >
        <strong>
          Move the dot to 
          <span
            style="white-space: nowrap;"
          >
            <span />
            <span
              class="mock-TeX"
            >
              -E
            </span>
            <span />
          </span>
           on the number line.
        </strong>
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="2"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <div
            class="perseus-widget perseus-widget-interactive-number-line"
          >
            <div
              class="graphie-container"
            >
              <div
                class="graphie"
                style="position: relative; width: 459.99999999999994px; height: 80px;"
              >
                <svg
                  height="80"
                  style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); z-index: 2;"
                  version="1.1"
                  width="460"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <desc
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                  >
                    Created with Raphaël
                  </desc>
                  <defs
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                  />
                  <rect
                    fill="#000000"
                    height="80"
                    opacity="0"
                    r="0"
                    rx="0"
                    ry="0"
                    stroke="#000"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); opacity: 0;"
                    width="460"
                    x="0"
                    y="0"
                  />
                </svg>
                <svg
                  height="80"
                  style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                  version="1.1"
                  width="459.99999999999994"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <desc
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                  >
                    Created with Raphaël
                  </desc>
                  <defs
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                  />
                  <path
                    d="M454.44999999999993,45.6C454.79999999999995,43.5,458.6499999999999,40.35,459.69999999999993,40C458.6499999999999,39.65,454.79999999999995,36.5,454.44999999999993,34.4"
                    fill="none"
                    stroke="#000000"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 2; stroke-linejoin: round; stroke-linecap: round;"
                    transform=""
                  />
                  <path
                    d="M229.99999999999997,40C229.99999999999997,40,229.99999999999997,40,458.94999999999993,40"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 2;"
                  />
                  <path
                    d="M-3.4499999999999886,45.6C-3.0999999999999885,43.5,0.7500000000000115,40.35,1.8000000000000114,40C0.7500000000000113,39.65,-3.099999999999989,36.5,-3.4499999999999886,34.4"
                    fill="none"
                    stroke="#000000"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 2; stroke-linejoin: round; stroke-linecap: round;"
                    transform="rotate(180 1.8000000000000114 40)"
                  />
                  <path
                    d="M229.99999999999997,40C229.99999999999997,40,229.99999999999997,40,1.0500000000000114,40"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 2;"
                  />
                  <path
                    d="M29.999999999999982,48L29.999999999999982,32"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 2;"
                  />
                  <path
                    d="M79.99999999999999,48L79.99999999999999,32"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 2;"
                  />
                  <path
                    d="M129.99999999999997,48L129.99999999999997,32"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 2;"
                  />
                  <path
                    d="M179.99999999999997,48L179.99999999999997,32"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 2;"
                  />
                  <path
                    d="M229.99999999999997,48L229.99999999999997,32"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 2;"
                  />
                  <path
                    d="M280,48L280,32"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 2;"
                  />
                  <path
                    d="M330,48L330,32"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 2;"
                  />
                  <path
                    d="M380,48L380,32"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 2;"
                  />
                  <path
                    d="M430,48L430,32"
                    fill="none"
                    stroke="#000000"
                    stroke-width="2"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 2;"
                  />
                  <path
                    d="M29.999999999999982,48L29.999999999999982,32"
                    fill="none"
                    stroke="#1865f2"
                    stroke-width="3.5"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 3.5;"
                  />
                  <path
                    d="M430,48L430,32"
                    fill="none"
                    stroke="#1865f2"
                    stroke-width="3.5"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 3.5;"
                  />
                </svg>
                <div
                  style="position: absolute; left: 0px; top: 0px;"
                >
                  <div
                    style="position: absolute; width: 34px; height: 34px; left: 12.999999999999982px; top: 23px; transform: translateX(0px) translateY(0px) translateZ(0);"
                  >
                    <svg
                      height="34"
                      style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                      version="1.1"
                      width="34"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <desc
                        style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                      >
                        Created with Raphaël
                      </desc>
                      <defs
                        style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                      />
                      <ellipse
                        cx="NaN"
                        cy="NaN"
                        fill="#00a60e"
                        r="NaN"
                        rx="6"
                        ry="6"
                        stroke="#00a60e"
                        stroke-width="1"
                        style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); stroke-width: 1;"
                        transform=""
                      />
                    </svg>
                  </div>
                </div>
                <div
                  style="position: absolute; left: 0px; top: 0px; z-index: 2;"
                >
                  <div
                    data-interactive-kind-for-testing="movable-point"
                    style="position: absolute; width: 48px; height: 48px; left: 5.999999999999982px; top: 16px; transform: translateX(0px) translateY(0px) translateZ(0);"
                  >
                    <svg
                      height="48"
                      style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                      version="1.1"
                      width="48"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <desc
                        style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                      >
                        Created with Raphaël
                      </desc>
                      <defs
                        style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                      />
                      <ellipse
                        cx="24"
                        cy="24"
                        fill="#000000"
                        opacity="0"
                        rx="24"
                        ry="24"
                        stroke="#000"
                        style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); opacity: 0; cursor: move;"
                      />
                    </svg>
                  </div>
                </div>
                <span
                  class="graphie-label"
                  data-math-formula="-4"
                  style="position: absolute; padding: 7px; color: rgb(24, 101, 242); left: 29.999999999999982px; top: 61.2px; fill: none;"
                >
                  <span
                    class="tex-holder"
                  />
                </span>
                <span
                  class="graphie-label"
                  data-math-formula="-3"
                  style="position: absolute; padding: 7px; color: black; left: 79.99999999999999px; top: 61.2px; fill: none;"
                >
                  <span
                    class="tex-holder"
                  />
                </span>
                <span
                  class="graphie-label"
                  data-math-formula="-2"
                  style="position: absolute; padding: 7px; color: black; left: 129.99999999999997px; top: 61.2px; fill: none;"
                >
                  <span
                    class="tex-holder"
                  />
                </span>
                <span
                  class="graphie-label"
                  data-math-formula="-1"
                  style="position: absolute; padding: 7px; color: black; left: 179.99999999999997px; top: 61.2px; fill: none;"
                >
                  <span
                    class="tex-holder"
                  />
                </span>
                <span
                  class="graphie-label"
                  data-math-formula="0"
                  style="position: absolute; padding: 7px; color: black; left: 229.99999999999997px; top: 61.2px; fill: none;"
                >
                  <span
                    class="tex-holder"
                  />
                </span>
                <span
                  class="graphie-label"
                  data-math-formula="1"
                  style="position: absolute; padding: 7px; color: black; left: 280px; top: 61.2px; fill: none;"
                >
                  <span
                    class="tex-holder"
                  />
                </span>
                <span
                  class="graphie-label"
                  data-math-formula="2"
                  style="position: absolute; padding: 7px; color: black; left: 330px; top: 61.2px; fill: none;"
                >
                  <span
                    class="tex-holder"
                  />
                </span>
                <span
                  class="graphie-label"
                  data-math-formula="3"
                  style="position: absolute; padding: 7px; color: black; left: 380px; top: 61.2px; fill: none;"
                >
                  <span
                    class="tex-holder"
                  />
                </span>
                <span
                  class="graphie-label"
                  data-math-formula="4"
                  style="position: absolute; padding: 7px; color: rgb(24, 101, 242); left: 430px; top: 61.2px; fill: none;"
                >
                  <span
                    class="tex-holder"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
